<resources>
    <string name="app_name">Auto Caller</string>
    <string name="action_settings">Add a number</string>
    <string name="action_show_log">Show log</string>
    <string name="title_activity_show_log">Auto Calls Log</string>
    <string name="action_delete_log">Delete log</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_info">Help</string>
    <string name="help">In the Name of Allah.
This app is used to ring your friends phones by calling them to wake up them to prayer.
The app repeats call automatically until your friend rejects / answers the call, or the max ring count is reached.
You can specify the max number of repeated calls for each list item.
You can reorder the calling list and you can add the number more than once.
You can view the log for calls from the above menu.</string>
    <string name="delete_log_confirm_title">Delete Log</string>
    <string name="delete_log_confirm_body">Are you sure you want to delete the log?</string>
    <string name="call_status_answered_or_rejected">Answered / Rejected</string>
    <string name="call_status_no_answer">No Respond</string>
    <string name="call_status_unknown">Unknown</string>
    <string name="toast_display_call_callTo">Auto Call To </string>
    <string name="toast_display_call_of"> Of </string>
    <string name="already_started_msg_title">Auto Calls</string>
    <string name="already_started_msg_body">Auto calls have been already started. Do you want to stop it now?</string>
    <string name="toast_please_add_items">Please add at least one contact to the list first</string>
    <string name="toast_starting_calls">Calling the numbers in list…</string>
    <string name="title_activity_set_notification_time">Notification Time</string>
    <string name="some_not_answered_title">Auto Caller</string>
    <string name="some_not_answered_body">Some numbers in list have not responded. Try again with them now?</string>
    <string name="auto_call_restart">Recalling not answered numbers</string>
    <string name="confirm_delete_group_title">Confirm</string>
    <string name="confirm_delete_group_body">Are you sure you want to delete this group?</string>
    <string name="group_name">Group Name:</string>
    <string name="call_profile_name">AutoCall Profile Name:</string>
    <string name="list_items">Member Contacts:</string>
    <string name="add_contactgroup">Adding Group</string>
    <string name="please_input_group_name">Please fill group name</string>
    <string name="group_name_already_exists">Group name already exists</string>
    <string name="group_members_atleast_two">At least two members should be selected</string>
    <string name="action_edit_group">Call Groups</string>
    <string name="action_edit_profile">Call Profile</string>
    <string name="groups_help">With groups, you can add numbers to group such that when one of them responds / rejects, the other members are not called.</string>
    <string name="contacts_list_emptry">Contacts List is empty. Please add contacts to the calling list in the main screen</string>
    <string name="add_new_list_title">Enter List Name</string>
    <string name="add_success">Added Successfully</string>
    <string name="delete_list">Delete Call Menu</string>
    <string name="edit_list_name">Edit Call Menu Name</string>
    <string name="set_sched_for_list">Set Calling Schedule</string>
    <string name="delete_list_confirm_body">Are you sure you want to delete this menu? All numbers and groups associated to it will be deleted also.</string>
    <string name="title_activity_maps">Map</string>
    <string name="pref_playfinishtune_title">Play Finish Tune</string>
    <string name="pref_playfinishtune_descr">Play a notification sound when the list is finished</string>
    <string name="settings">Settings</string>
    <string name="stop_calls">Stop Calls</string>
    <string name="save_to_clipboard" translatable="false">Save to clipboard</string>
    <string name="load_from_clipboard">Load from clipboard</string>
    <string name="no_list_in_clipboard">Could not find a valid list in clipboard</string>
    <string name="found_list_in_clipboard_title">List Found</string>
    <string name="found_list_in_clipboard_msg">A list found in clipboard. Do you want to replace the current list with the list found? This action cannot be undo.</string>
    <string name="auto_recall_count">Auto Recall Count</string>
    <string name="auto_recall_count_summary">Count of times automatically recalling not answering numbers in list</string>
    <string name="auto_recall_count_array_default_name">No Automatic recall</string>
    <string name="stopping_auto_calls">Stopping Auto Calls…</string>
    <string name="mission_permissions_msg">Missing Permissions. Cannot start calls. Please allow permissions for this app from your device settings</string>
    <string name="dialog_title_systemalert_permission">Permission Required</string>
    <string name="dialog_msg_systemalert_permission">In order for this app to work normally, we need the permission \'draw over other apps\'. Tab to show your phone settings to allow the permission</string>
    <string name="riyadh">Riyadh</string>
    <string name="saudi">Saudi Arabia</string>
    <string name="cairo">Cairo</string>
    <string name="egypt">Egypt</string>
    <string name="jeddah">Jeddah</string>
    <string name="tabuk">Tabuk</string>
    <string name="dammam">Dammam</string>
    <string name="alexandria">Alexandria</string>
    <string name="makkah">Makkah</string>
    <string name="madinah">Madinah</string>
    <string name="benha">Benha</string>
    <string name="title_activity_cities">Cities</string>
    <string name="cities">Cities</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="timezone">Timezone</string>
    <string name="location">Location</string>
    <string name="pick_location">Pick Location</string>
    <string name="not_selected">[Not Selected]</string>
    <string name="save">Save</string>
    <string name="city_already_exists">City already exists</string>
    <string name="prayer_calc_method">Prayer Time Calculation Method</string>
    <string name="prayer_asr_calc_method">Asr Prayer Time Calculation Method</string>
    <string name="jafari">Jafari</string>
    <string name="karachi">Karachi</string>
    <string name="ISNA">ISNA</string>
    <string name="MWL">MWL</string>
    <string name="Makkah">Um AlQura</string>
    <string name="Egypt">Egypt</string>
    <string name="Tehran">Tehran</string>
    <string name="shafei">Shafei</string>
    <string name="hanafi">Hanafi</string>
    <string name="all_fields_required">All Fields Required</string>
    <string name="pref_ring_by_city">الرن بواسطة المدينة</string>
    <string name="pref_minMinutesAfterFajr_title">المدة الدنيا بعد الفجر</string>
    <string name="pref_minMinutesAfterFajr_summary">تحديد عدد الدقائق بعد طلوع الفجر لبدء الرن على الشخص</string>
    <string name="pref_minMinutesBeforeSunrise_title">المدة الدنيا قبل الشروق</string>
    <string name="pref_minMinutesBeforeSunrise_summary">تحديد عدد الدقائق قبل الشروق للتوقف عن الرن على الشخص</string>
    <string name="pref_ringPriority_title">أولوية الأشخاص في الرن</string>
    <string name="pref_ringPriority_summary">تحديد الأولوية للرن على الأشخاص بالترتيب</string>
    <string name="delete_item">Delete Item</string>
    <string name="err_delete_default_item">Cannot delete the default item</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="dlg_select_city_msg">Changing all items with number %s</string>
    <string name="dlg_select_city_title">Change Number City</string>
    <string name="dlg_deleteCity_title">Delete City</string>
    <string name="dlg_deleteCity_msg">Are you sure you want to delete this city?</string>
    <string name="dlg_deleteCity_failed_msg">Failed to delete this city. There are numbers linked to it already:</string>
    <string name="minMinutesBeforeSunrise">Minutes of Stop Before Sunrise</string>
    <string name="minMinuteAfterFajr">Minutes for Ringing After Fajr</string>
    <string name="dlg_sessionFound_title">Uncompleted session found</string>
    <string name="dlg_sessionFound_msg">A Calling session found that is abnormally stopped. Do you want to continue session now? Press no to ignore</string>
    <string name="pref_enablecity_summary">Controls whether the program will check the city fajr and sunrise times</string>
    <string name="pref_enablecity_title">Enable Ring By City</string>
    <string name="dlg_failedToStart_title">Cannot start calling</string>
    <string name="dlg_failedToStart_msg">Cannot call any item in list, because all are either rejected, sunrised, or before fajr.</string>
    <string name="ignored_before_fajr">Ignored: before Fajr</string>
    <string name="ignored_after_sunrise">Ignored: after sunrise</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="saved_countries">Saved Countries</string>
    <string name="notice_pray_times">Pray Times Displayed in your timezone</string>
    <string name="all_before_fajr_message">All remaining contacts in list are before Fajr. The first contact can be called at %s. Please choose what to do</string>
    <string name="retry_now">Retry now</string>
    <string name="schedule_recall">Schedule Recall</string>
    <string name="waiting_fajr">[ Waiting Fajr ]</string>
    <string name="default_profile">Default</string>
    <string name="voice_mail_profile">Voice Mail (When no Respond)</string>
    <string name="dlg_select_profile_title">Select Auto Call Profile</string>
    <string name="activity_call_profiles">Auto Call Profiles</string>
    <string name="call_profile_noReplyTimeoutSeconds">No Reply Timeout (Seconds):</string>
    <string name="call_profile_killCallAfterSeconds">Hangup Call After (Seconds):</string>
    <string name="err_delete_item_in_use">Cannot delete this item because it being already used</string>
    <string name="automatically_terminated_call">AutoCaller: ِAutomatically Hangup Call</string>
    <string name="automatic_terminate_call_failed">AutoCaller: Could not Hangup the Active Call</string>
    <string name="pause_calls">Pause Calls</string>
    <string name="pausing_auto_calls">Pausing Auto Calls…</string>
    <string name="resuming_auto_calls">Resuming Auto Calls…</string>
    <string name="resume_calls">Resume</string>
    <string name="fatal_exception_dlg_title">Error - Auto Caller</string>
    <string name="fatal_exception_dlg_msg">A fatal error has occurred. Please retry the operation. Details:</string>
    <string name="do_you_want_to_ignore">Do you want to ignore any numbers in this calling session?</string>
    <string name="pref_show_ignore_title">Show Ignore Numbers Dialog</string>
    <string name="pref_show_ignore_summary">Shows a dialog before starting calls to specify numbers to be ignored from calls</string>
    <string name="share_app">Share App</string>
    <string name="share_msg_dlg">Thank you for using Auto Caller App!\nPlease share this app to gain Thawab (reward) from Allah!</string>
    <string name="not_now">Not Now</string>
    <string name="share">Share</string>
    <string name="share_msg">Wakeup others for Fajr! Auto Caller App will never stop riging your friends phones unitl they reject your repeated calls. It is Free, no Ads!</string>
    <string name="upgrading_application_data">Upgrading Application data…</string>
    <string name="make_app_faster_msg">This is to make the app faster. It can take several minutes, please wait…</string>
    <string name="list_empty_add_plus">List is empty. Add an itme with the plus-button below.</string>
</resources>