<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.SwitchPreference
        app:key="playFinishTune"
        app:defaultValue="true"
        app:title="@string/pref_playfinishtune_title"
        app:summary="@string/pref_playfinishtune_descr" />
    <androidx.preference.SwitchPreference
        app:key="showIgnoreDlg"
        app:defaultValue="false"
        app:title="@string/pref_show_ignore_title"
        app:summary="@string/pref_show_ignore_summary" />
    <androidx.preference.ListPreference
        app:key="autoRecallListNo"
        app:title="@string/auto_recall_count"
        app:summary="@string/auto_recall_count_summary"
        app:entries="@array/auto_recall_count_names"
        app:entryValues="@array/auto_recall_count_values"
        app:defaultValue="@string/auto_recall_count_array_default_value" />
    <androidx.preference.PreferenceCategory app:title="@string/pref_ring_by_city">
        <androidx.preference.SwitchPreference
            app:key="cityBasedRingEnabled"
            app:defaultValue="true"
            app:title="@string/pref_enablecity_title"
            app:summary="@string/pref_enablecity_summary" />
        <!--<EditTextPreference-->
            <!--app:dependency="cityBasedRingEnabled"-->
            <!--app:key="minMinutesAfterFajr"-->
            <!--app:title="@string/pref_minMinutesAfterFajr_title"-->
            <!--app:summary="@string/pref_minMinutesAfterFajr_summary"-->
            <!--app:defaultValue="0" />-->
        <!--<EditTextPreference-->
            <!--app:dependency="cityBasedRingEnabled"-->
            <!--app:key="minMinutesBeforeSunrise"-->
            <!--app:title="@string/pref_minMinutesBeforeSunrise_title"-->
            <!--app:summary="@string/pref_minMinutesBeforeSunrise_summary"-->
            <!--app:defaultValue="0" />-->
        <!--<ListPreference-->
            <!--app:dependency="cityBasedRingEnabled"-->
            <!--app:key="priorityOfRing"-->
            <!--app:title="@string/pref_ringPriority_title"-->
            <!--app:summary="@string/pref_ringPriority_summary"-->
            <!--app:entries="@array/ring_priority_names"-->
            <!--app:entryValues="@array/ring_priority_values"-->
            <!--app:defaultValue="@string/ring_priority_array_default_value" />-->
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
