<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kilanny.autocaller.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_groups"
        android:orderInCategory="102"
        android:title="@string/action_edit_group"
        android:icon="@android:drawable/sym_call_missed"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_show_log"
        android:orderInCategory="102"
        android:title="@string/action_show_log"
        android:icon="@android:drawable/ic_menu_call"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="103"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_info"
        app:showAsAction="ifRoom" />
</menu>
