<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="kilanny.autocaller.activities.EditCityActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/prayerCalcMethodLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prayer_calc_method" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinPrayerCalcMethod" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/asrPrayerCalcMethodLayout"
        app:layout_constraintTop_toBottomOf="@id/prayerCalcMethodLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prayer_asr_calc_method" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinAsrPrayerCalcMethod" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/countryLayout"
        app:layout_constraintTop_toBottomOf="@id/asrPrayerCalcMethodLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country" />
        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionHint="@string/saved_countries"
            android:completionThreshold="1"
            android:id="@+id/txtCountryName" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cityLayout"
        app:layout_constraintTop_toBottomOf="@id/countryLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city" />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCityName" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/timezoneLayout"
        app:layout_constraintTop_toBottomOf="@id/cityLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timezone" />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/txtTimezone" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/minMinuteAfterFajrLayout"
        app:layout_constraintTop_toBottomOf="@id/timezoneLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minMinuteAfterFajr" />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/txtMinMinuteAfterFajr" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/minMinutesBeforeSunriseLayout"
        app:layout_constraintTop_toBottomOf="@id/minMinuteAfterFajrLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minMinutesBeforeSunrise" />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/txtMinMinutesBeforeSunrise" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/locationLayout"
        app:layout_constraintTop_toBottomOf="@id/minMinutesBeforeSunriseLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPickLocation"
            android:text="@string/pick_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/selectedPlace"
            android:text="@string/not_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintTop_toBottomOf="@id/locationLayout"
        android:id="@+id/btnEditCityOk"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>