<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShowCityPrayTimesActivity">

    <TextView
        android:id="@+id/txtNote"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/notice_pray_times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        app:layout_constraintTop_toBottomOf="@id/txtNote"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
                <TextView
                    android:text="@string/fajr"
                    android:textSize="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="03:36"
                    android:textSize="30sp"
                    android:id="@+id/txtFajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <TextView
                android:text="@string/sunrise"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="03:36"
                android:textSize="30sp"
                android:id="@+id/txtSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:text="@string/dhuhr"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="03:36"
                android:textSize="30sp"
                android:id="@+id/txtDhuhr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:text="@string/asr"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="03:36"
                android:textSize="30sp"
                android:id="@+id/txtAsr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <TextView
                android:text="@string/maghrib"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="03:36"
                android:textSize="30sp"
                android:id="@+id/txtMagrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <TextView
                android:text="@string/isha"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="03:36"
                android:textSize="30sp"
                android:id="@+id/txtIsha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>