<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="14">
        <TextView
            android:layout_weight="1"
            android:text="@string/call_profile_name"
            android:layout_width="match_parent"
            android:layout_height="0px" />
        <EditText
            android:layout_weight="2"
            android:id="@+id/txtProfileName"
            android:layout_width="match_parent"
            android:layout_height="0px" />

        <TextView
            android:layout_weight="1"
            android:text="@string/call_profile_noReplyTimeoutSeconds"
            android:layout_width="match_parent"
            android:layout_height="0px" />
        <NumberPicker
            android:layout_weight="2"
            android:id="@+id/numNoReplyTimeoutSeconds"
            android:layout_width="match_parent"
            android:layout_height="0dp" />


        <TextView
            android:layout_weight="1"
            android:text="@string/call_profile_killCallAfterSeconds"
            android:layout_width="match_parent"
            android:layout_height="0px" />
        <NumberPicker
            android:layout_weight="2"
            android:id="@+id/numKillCallAfterSeconds"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <!--<Button-->
            <!--android:id="@+id/btnEditCallProfileDlgOk"-->
            <!--android:layout_weight="2"-->
            <!--android:text="@android:string/ok"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0px" />-->
    </LinearLayout>
</ScrollView>